updating README and fixing unit testing